--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">tugas1</string>
+    <string name="app_name">Profile</string>
+    <string name="action_setting_language">Language</string>
+    <string name="label_setting_locale_summary">Change device language</string>
+    <string name="label_setting_locale_title">Change language</string>
+    <string name="key_setting_locale">setting_locale</string>
+    <string name="action_notification">Settings</string>
+
 </resources>
