--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">Profile</string>
-    <string name="action_setting_language">Language</string>
-    <string name="label_setting_locale_summary">Change device language</string>
-    <string name="label_setting_locale_title">Change language</string>
-    <string name="key_setting_locale">setting_locale</string>
-    <string name="action_notification">Settings</string>
+    <string name="teknik_informatika">informatic engineering</string>
+    <string name="pengikut">followers</string>
+    <string name="_2k"></string>
+    <string name="_1k"></string>
+    <string name="_5k"></string>
 
 </resources>
